<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity"
    android:padding="@dimen/_16dp"
    android:background="@color/white">


    <Button
        android:id="@+id/btn_line_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line_chart"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_bar_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar_chart"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_line_chart"
        android:layout_marginBottom="@dimen/_16dp"/>


    <Button
        android:id="@+id/btn_combined_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/combined_chart"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_line_chart"
        android:layout_marginTop="@dimen/_16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>